# sinepia

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
sinepia-ast/: Cargo.toml
sinepia-ast/src/: enclosed.rs  functions.rs  lib.rs  literals.rs  module.rs  punctuated.rs  token.rs  types.rs  visitor.rs
sinepia-ast/src/expr/: binary.rs  block.rs  call.rs  ifelse.rs  lit.rs  loop_expr.rs  mod.rs  ret.rs  unary.rs  whi.rs
sinepia-ast/src/logic/: exists.rs  forall.rs  hoare.rs  mod.rs  propbin.rs
sinepiac/: Cargo.toml
sinepiac-diagnostics/: Cargo.toml
sinepiac-diagnostics/src/: early_eof.rs  lib.rs  tokens.rs  traits.rs  unexpected_token.rs  unknown_token.rs
sinepiac-driver/: Cargo.toml
sinepiac-driver/src/: db.rs  lib.rs
sinepiac-driver/src/driver/: diagnostics.rs  mod.rs
sinepiac-instrument/: Cargo.toml
sinepiac-instrument/src/: lib.rs
sinepiac-lexer/: Cargo.toml
sinepiac-lexer/src/: lib.rs  test.rs  tokens.rs
sinepiac-parser/: Cargo.toml
sinepiac-parser/src/: lib.rs  test.rs
sinepiac-parser/src/context/: mod.rs  peakable.rs  test.rs
sinepiac-parser/src/parser/: enclosed.rs  function.rs  literals.rs  mod.rs  module.rs  punctuated.rs  token.rs  types.rs
sinepiac-parser/src/parser/expr/: binary.rs  block.rs  call.rs  ifelse.rs  lit.rs  loop_expr.rs  mod.rs  ret.rs  unary.rs  whi.rs
sinepiac-parser/src/parser/logic/: exists.rs  forall.rs  hoare.rs  mod.rs  probin.rs
sinepiac-span/: Cargo.toml
sinepiac-span/src/: lib.rs  newlines.rs  source.rs  span.rs
sinepiac/src/: cli.rs  lib.rs  main.rs
