[workspace]
resolver = "2"
members = [
    "sinepia-ast",
    "sinepiac-diagnostics",
    "sinepiac",
    "sinepiac-driver",
    "sinepiac-lexer",
    "sinepiac-span",
    "sinepiac-parser"
, "sinepiac-instrument"]

[workspace.dependencies]
clap = { version = "4.5.18" }
codespan-reporting="0.11.1"
logos = "0.14.2"
pretty_env_logger = "0.5.0"
proc-macro2 = "1"
quote = "1"
salsa = {git = "https://github.com/salsa-rs/salsa", rev="4a7c955255e707e64e43f3ce5eabb771ae067768"}
syn = {version = "2", features = ["full"]}
tracing = "0.1.40"
tracing-subscriber="0.3.17"

sinepia-ast = {path = "./sinepia-ast"}
sinepiac-diagnostics = {path = "./sinepiac-diagnostics"}
sinepiac-driver  = {path = "./sinepiac-driver"}
sinepiac-instrument = {path = "./sinepiac-instrument"}
sinepiac-lexer = {path = "./sinepiac-lexer"}
sinepiac-parser = {path = "./sinepiac-parser"}
sinepiac-span = {path = "./sinepiac-span"}
